--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,3 +12,12 @@ repos:
     rev: v4.3.0
     hooks:
     -   id: check-yaml
+    -   id: end-of-file-fixer
+    -   id: check-yaml
+-   repo: local
+    hooks:
+        -   id: jinja-ninja
+            name: Jinja Validation
+            entry: jinja-ninja
+            language: python
+            files: ^app/
