--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ Flask = "^2.1.3"
 [tool.poetry.dev-dependencies]
 black = "^22.6.0"
 pre-commit = "^2.20.0"
+jinjaninja = "^0.1.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
