--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,23 +1,26 @@
-default_stages: [commit]
+default_stages: [ commit ]
 repos:
--   repo: https://github.com/psf/black
+  - repo: https://github.com/psf/black
     rev: 22.6.0
     hooks:
       - id: black
--   repo: https://github.com/PyCQA/isort
+  - repo: https://github.com/PyCQA/isort
     rev: 5.10.1
     hooks:
-    -   id: isort
--   repo: https://github.com/pre-commit/pre-commit-hooks
+      - id: isort
+  - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.3.0
     hooks:
-    -   id: check-yaml
-    -   id: end-of-file-fixer
-    -   id: check-yaml
--   repo: local
+      - id: check-yaml
+      - id: end-of-file-fixer
+      - id: check-yaml
+  - repo: local
     hooks:
-        -   id: jinja-ninja
-            name: Jinja Validation
-            language: system
-            entry: bash -c 'poetry shell && jinja-ninja'
-            files: ^app/
+      - id: jinja-ninja
+        name: Jinja Validation
+        language: system
+        entry: jinja-ninja
+        files: ^app/templates/
+        types: [ html ]
+        pass_filenames: true
+        args: [ ]
